# sophoscentralbeat

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  LICENSE  Makefile  NOTICE.txt  README.md  config.json  fields.yml  main.go  main_test.go  make.bat  openapi.yml  sophoscentralbeat.docker.yml  sophoscentralbeat.reference.yml  sophoscentralbeat.yml
_meta/: beat.docker.yml  beat.yml  example.yml  fields.yml
beater/: sophoscentralbeat.go
cmd/: root.go
config/: config.go
crypto/: decryption_test.go  encryption.go
data/: meta.json
docs/: fields.asciidoc  index.asciidoc
handlers/: positionHandler.go  positionHandler_test.go
heartbeat/: enable.go  status_beater.go
include/: fields.go
lrlog/: BUILD.bazel  lrlog.go
lrlog/tests/: BUILD.bazel  lrlog_test.go
sophoscentral/: README.md  api_alert_controller_v1_impl.go  api_event_controller_v1_impl.go  api_sec_migration_controller_v1_impl.go  client.go  configuration.go  model_alert_aggregate.go  model_alert_entity.go  model_chronology.go  model_core_remedy_item.go  model_core_remedy_items.go  model_current_licenses_response.go  model_customer_feature.go  model_customer_features_response.go  model_customer_license.go  model_date_time.go  model_date_time_zone.go  model_endpoint_ad_sync_info.go  model_endpoint_core_event_certificate.go  model_endpoint_entity.go  model_endpoint_whitelist_properties.go  model_endpoints_response.go  model_event_aggregate.go  model_event_detail_property.go  model_hashes_response.go  model_installer_info.go  model_installer_info_response.go  model_legacy_event_entity.go  response.go  (+3 more)
(+32 files in other folders)
