load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "go_default_test",
    srcs = ["lrlog_test.go"],
    deps = [
        "//internal/pkg/lrlog:go_default_library",
        "//internal/pkg/testing/capture:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
